--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,35 @@
 
 @tailwind components;
 @tailwind utilities;
+
+.text-input {
+  @apply h-full w-full outline-none rounded border-2 border-[#999] pt-0 pr-5 pb-0 pl-3  text-[25px] focus:border focus:border-sky-500 focus:ring-1 focus:ring-sky-500 placeholder:text-[#bfbfbf];
+}
+
+.todo-container {
+  @apply bg-white w-[44rem] h-fit mt-16 my-32 mx-auto rounded pt-[28px] pb-[30px] shadow-lg shadow-blue-500/40
+}
+
+.edited-input {
+  @apply w-5/6 outline-none rounded p-1 border border-2 border-red-600 focus:border focus:border-sky-500 focus:ring-1 focus:ring-sky-500
+}
+
+.task-item {
+  @apply flex items-center justify-between list-none text-[17px] mb-[18px] pb-[16px] border-b border-[#ccc]
+}
+
+.controller-container {
+  @apply border-b-2 flex justify-between items-center py-[18px] px-[25px]
+}
+
+.controller-btn {
+  @apply my-0 mx-[8px] border hover:border-red-400 py-1 px-3 rounded-lg 
+}
+
+.clear-btn {
+  @apply bg-red-400 border-none outline-none rounded-md text-white font-[13px] py-[7px] px-[13px] tracking-[0.3px]
+}
+
+.task-btn {
+  @apply flex items-center justify-between w-14 text-xl cursor-pointer
+}
